Clean up cache and ignore node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Ignore node_modules
 node_modules/
 
-# Ignore log files
-*.log
+# # Ignore log files
+# *.log
 
-# Ignore environment variables
-.env
+# # Ignore environment variables
+# .env
 
-# Ignore temporary files
-temp/
-*.tmp
+# # Ignore temporary files
+# temp/
+# *.tmp
 
-# Ignore OS files
-.DS_Store
-Thumbs.db
+# # Ignore OS files
+# .DS_Store
+# Thumbs.db
