--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ lfs filter=lfs diff=lfs merge=lfs -text
 track filter=lfs diff=lfs merge=lfs -text
 *.pack filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
+node_modules/.cache/default-development/*.pack filter=lfs diff=lfs merge=lfs -text
