--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "portfolio",
   "version": "0.1.0",
@@ -33,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install --legacy-peer-deps && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
