--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "^16.14.0",
+    "react-circle": "^1.1.1",
+    "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
     "react-js-loader": "^0.1.0",
     "react-lottie": "^1.2.3",
-    "react-parallax-tilt": "^1.6.1",
+    "react-parallax-tilt": "^1.7.245",
     "react-pdf": "^5.7.2",
     "react-reveal": "^1.2.2",
     "react-router-bootstrap": "^0.26.0",
