--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "portfolio": "file:",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-circle": "^1.1.1",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-js-loader": "^0.1.0",
     "react-lottie": "^1.2.3",
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm install --legacy-peer-deps && react-scripts build",
+    "build": "react-script build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
