--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-pdf": "^5.7.2",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-spring": "^9.7.4",
     "react-tsparticles": "^1.41.5",
     "react-vertical-timeline-component": "^3.5.2",
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-script build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
