--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "lottie-react": "^2.4.0",
     "portfolio": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.1.2",
@@ -25,7 +26,7 @@
     "react-pdf": "^5.7.2",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.7.4",
     "react-tsparticles": "^1.41.5",
     "react-vertical-timeline-component": "^3.5.2",
